# RustHomeWork

./: .gitignore  start-k8s.bat  start-k8s.ps1  实验报告.md
.github/workflows/: docker.yml
ForumBackend/: Cargo.toml  Dockerfile
ForumBackend/api/: Cargo.toml
ForumBackend/api/src/: main.rs
ForumBackend/common/: Cargo.toml
ForumBackend/common/src/: lib.rs
ForumBackend/common/src/config/: mod.rs
ForumBackend/common/src/discovery/: mod.rs
ForumBackend/common/src/errs/: mod.rs
ForumBackend/common/src/storage/database/mysql/: article.rs  comment.rs  mod.rs  user.rs
ForumBackend/common/src/storage/redis/: mod.rs
ForumBackend/config/: blog-api.yaml  blog-rpc-admin.yaml  blog-rpc-bmanager.yaml  blog-rpc-image.yaml  blog-rpc-static.yaml  blog-rpc-user.yaml  discovery.yaml  mysql.yaml  oss.yaml  ports.yaml  redis.yaml
ForumBackend/deployments/deploy/: clusterRole.yaml  forum-admin-deployment.yaml  forum-admin-service.yaml  forum-api-deployment.yaml  forum-api-service.yaml  forum-bmanager-deployment.yaml  forum-bmanager-service.yaml  forum-image-deployment.yaml  forum-image-service.yaml  forum-static-deployment.yaml  forum-static-service.yaml  forum-user-deployment.yaml  forum-user-service.yaml
ForumBackend/protocol/: Cargo.toml  build.rs
ForumBackend/protocol/proto/: admin.proto  bmanager.proto  image.proto  sdkws.proto  static.proto  user.proto
ForumBackend/protocol/src/: lib.rs
ForumBackend/rpc/admin/: Cargo.toml
ForumBackend/rpc/admin/src/: main.rs
ForumBackend/rpc/bmanager/: Cargo.toml
ForumBackend/rpc/bmanager/src/: main.rs
ForumBackend/rpc/image/: Cargo.toml
ForumBackend/rpc/image/src/: main.rs
ForumBackend/rpc/static_svc/: Cargo.toml
ForumBackend/rpc/static_svc/src/: main.rs
ForumBackend/rpc/user/: Cargo.toml
ForumBackend/rpc/user/src/: main.rs
ForumFrontend/: Dockerfile  after_toggle.html  index.html  package-lock.json  package.json  test.cjs  test2.cjs  test3.cjs  test4.cjs  前端设计表单.md  样式.md
(+20 files in other folders)
