[workspace]
members = [
    "api",
    "rpc/*",
    "common",
    "protocol",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"] }
sea-orm = { version = "1.0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
redis = { version = "0.25", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3"
uuid = { version = "1.8", features = ["v4"] }
