[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
common = { version = "0.1.0", path = "../common" }
protocol = { version = "0.1.0", path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
