[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"] }
sea-orm = { version = "1.0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
redis = { version = "0.25", features = ["tokio-comp"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4"] }
tonic.workspace = true
